# Tanuki

./: .editorconfig  .gitignore  README.md  io.github.rdbende.Tanuki.json  meson.build  pypi-dependencies.json  pyproject.toml  tanuki.doap
data/: io.github.rdbende.Tanuki.desktop.in  io.github.rdbende.Tanuki.gresource.xml  io.github.rdbende.Tanuki.gschema.xml  io.github.rdbende.Tanuki.metainfo.xml.in  meson.build
data/icons/: meson.build
data/ui/: login_dialog.blp  meson.build  style.css  window.blp
data/ui/dialogs/: account_setup.blp  login.blp
data/ui/pages/: user.blp
data/ui/views/sidebar/: account_chooser.blp  account_row.blp  item.blp  view.blp
data/ui/widgets/: spinner_button.blp
flatpak/: io.github.rdbende.Tanuki.json
po/: POTFILES  meson.build
src/: __init__.py  io.github.rdbende.Tanuki.in  login_dialog.py  main.py  settings.py  tools.py  window.py
src/architecture/: __init__.py  async_utils.py  async_worker.py  remote_content.py
src/backend/: __init__.py  login.py  session.py  settings.py
src/dialogs/: account_setup.py  login.py
src/pages/: __init__.py  page_manager.py  user_page.py
src/views/: sidebar.py
src/widgets/: __init__.py  spinner_button.py
